add more merge groups

--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -4,11 +4,11 @@ on:
     branches:
       - develop
       - master
-
   pull_request:
     branches:
       - master
       - develop
+  merge_group:
   workflow_dispatch:
   schedule:
     - cron:  '48 4 * * *'
