--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -4,12 +4,11 @@ on:
     branches:
       - develop
       - master
-
   pull_request:
     branches:
       - master
       - develop
-
+  merge_group:
   workflow_dispatch:
 
 jobs:
