CMake-based Python extension builds (#1992)
Building non-trivial extensions with setuptools alone is a pain. CMake should make everything way easier and simplify finding relevant libraries. This has also potential to solve conda-issues :crossed_fingers: .

Changes:
* CMake-based build of all python extensions, removes any build_clib steps (Closes #721)
* Removes most of the setuptools/distutils hacks
* Removes custom library-finding-logic that is now handled by CMake
* Enables/disables some additional warnings
* More relocatable CMake exports

A few modifications to SUNDIALS / SuiteSparse were necessary (all marked by some comment containing `AMICI` in the respective files):
* I wasn't able to convince SuiteSparse to find OpenBLAS on windows. Any attempt of doing so has been disabled, and AMICI's logic is used. BLAS with 64bit integer type is assumed.
* Sundials' FindKLU was modified to find static SuiteSparse libraries (or any SuiteSparse libraries at all...)

--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
+      AMICI_PARALLEL_COMPILE: ""
       ENABLE_GCOV_COVERAGE: "TRUE"
       CI_SONARCLOUD: "TRUE"
 
@@ -117,7 +118,7 @@ jobs:
         -d ${AMICI_DIR}/build/CMakeFiles/amici.dir/src \
         -b ${AMICI_DIR} -c -o coverage_cpp.info \
         && lcov --compat-libtool --no-external \
-        -d ${AMICI_DIR}/python/sdist/build/temp.linux-x86_64-$(python -c "import sys; print(sys.implementation.cache_tag)")/amici/src \
+        -d ${AMICI_DIR}/python/sdist/build/$(python -c "import sys, sysconfig; print(f'temp.{sysconfig.get_platform()}-{sys.implementation.cache_tag}_amici')")/CMakeFiles/amici.dir/src \
         -b ${AMICI_DIR}/python/sdist -c -o coverage_py.info \
         && lcov -a coverage_cpp.info -a coverage_py.info -o coverage.info
 
