Fix performance test / `AMICI_CXXFLAGS` and `AMICI_LDFLAGS` handling
`AMICI_CXXFLAGS` and `AMICI_LDFLAGS` were inserted in the wrong position, so that e.g.  `-O0` in `AMICI_CXXFLAGS` would have been overridden by `CMAKE_CXX_FLAGS_RELEASE`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,13 +85,16 @@ endif()
 
 # Legacy environment variables from Python-sdist times
 if(DEFINED ENV{AMICI_CXXFLAGS})
-  string(APPEND CMAKE_CXX_FLAGS " $ENV{AMICI_CXXFLAGS}")
+  message(STATUS "Appending flags from AMICI_CXXFLAGS: $ENV{AMICI_CXXFLAGS}")
+  add_compile_options("$ENV{AMICI_CXXFLAGS}")
 endif()
 if(DEFINED ENV{AMICI_LDFLAGS})
-  string(APPEND CMAKE_EXE_LINKER_FLAGS " $ENV{AMICI_LDFLAGS}")
+  message(STATUS "Appending flags from AMICI_LDFLAGS: $ENV{AMICI_LDFLAGS}")
+  link_libraries("$ENV{AMICI_LDFLAGS}")
 endif()
 
 if(DEFINED ENV{SWIG})
+  message(STATUS "Setting SWIG_EXECUTABLE to $ENV{SWIG} ($SWIG)")
   set(SWIG_EXECUTABLE $ENV{SWIG})
 endif()
 
