DAE support in SBML (#2017)
* draft implementation

* cleanup

* fix implementation, case 00039 working

* Update model_dae.h

* simplify

* Update test_sbml_semantic_test_suite.yml

* doc

* sphinx

* fixup parameter DAE w missing init

* fix compartment DAE

* fix alg rule without formula

* Update python_interface.rst

* fix sm

* sympify init

* fix nans

* fix conservation laws

* fixup segfault

* fix

* fix

* cleanup

* fix conservation laws

* add exception for rate laws in algebraic compartments

* fix xdot construction

* fix boundary condition check

* fix rule id

* no bc shenanigans

* root initial values with algebraic rules

* rename symbols

* Update python_interface.rst

* Apply suggestions from code review

Co-authored-by: Daniel Weindl <dweindl@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Daniel Weindl <dweindl@users.noreply.github.com>

* adress reviews

* refactor attribute names and fix reduce

* cleanup ODE->DE

* cleanup ODE

* fixup cmake 17

---------

Co-authored-by: Daniel Weindl <dweindl@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,9 +360,9 @@ add_custom_target(
   fileTemplates
   SOURCES src/CMakeLists.template.cmake
           src/main.template.cpp
-          src/model_header.ODE_template.h
-          src/model.ODE_template.cpp
-          src/wrapfunctions.ODE_template.h
+          src/model_header.template.h
+          src/model.template.cpp
+          src/wrapfunctions.template.h
           src/wrapfunctions.template.cpp
           swig/CMakeLists_model.cmake
           swig/modelname.template.i
