--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -62,7 +62,7 @@ jobs:
       # retrieve test models
       - name: Download and install PEtab test suite
         run: |
-          git clone --depth 1 --branch develop \
+          git clone --depth 1 --branch main \
             https://github.com/PEtab-dev/petab_test_suite \
             && source ./build/venv/bin/activate \
             && cd petab_test_suite && pip3 install -e .
@@ -75,7 +75,6 @@ jobs:
 
       # run test models
       - name: Run PEtab test suite
-        # git clone --depth 1 https://github.com/petab-dev/petab_test_suite
         run: |
           source ./build/venv/bin/activate \
           && AMICI_PARALLEL_COMPILE=2 pytest -v \
