--- a/tests/benchmark-models/benchmark_models.yaml
+++ b/tests/benchmark-models/benchmark_models.yaml
@@ -96,6 +96,13 @@ Sneyd_PNAS2002:
   t_adj: 0.5
   note: benchmark collection reference ignores factor 1/2
 
+Smith_BMCSystBiol2013
+  llh: -343556.54636323644
+  t_sim: 1.0
+  t_fwd: 100.0
+  t_adj: 10.0
+  note: not part of original benchmark collection
+
 Weber_BMC2015:
   llh: -296.2017922646865
   t_sim: 0.005
