--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,7 @@ python/examples/example_presimulation/model_presimulation/*
 python/examples/example_presimulation/model_presimulation_re/*
 python/examples/example_constant_species/model_constant_species_reduced/*
 python/examples/example_constant_species/model_constant_species/*
+python/examples/example_jax/amici_models/*
 python/tests/sbml_test_models/*
 python/tests/piecewise_test/*
 
@@ -198,3 +199,4 @@ Benchmark-Models-PEtab/
 /test_bmc/
 
 CS_Signalling_ERBB_RAS_AKT/
+
