--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -91,10 +91,33 @@ jobs:
         source build/venv/bin/activate \
         && pytest \
           --ignore-glob=*petab* \
+          --ignore-glob=*test_splines.py \
           --cov=amici \
           --cov-report=xml:"${AMICI_DIR}/build/coverage_py.xml" \
           --cov-append \
           ${AMICI_DIR}/python/tests
+
+    # TODO <REMOVE BEFORE MERGE>
+    - name: Python tests splines
+      if: ${{ github.base_ref == 'develop' }}
+      run: |
+        source build/venv/bin/activate \
+        && pytest \
+          --cov=amici \
+          --cov-report=xml:"${AMICI_DIR}/build/coverage_py.xml" \
+          --cov-append \
+          ${AMICI_DIR}/python/tests/test_splines.py
+    # TODO </REMOVE BEFORE MERGE>
+
+    - name: Python tests splines
+      if: ${{ github.base_ref == 'master' }}
+      run: |
+        source build/venv/bin/activate \
+        && pytest \
+          --cov=amici \
+          --cov-report=xml:"${AMICI_DIR}/build/coverage_py.xml" \
+          --cov-append \
+          ${AMICI_DIR}/python/tests/test_splines.py
 
     - name: example notebooks
       run: |
