--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -224,6 +224,7 @@ set(AMICI_SRC_LIST
     include/amici/solver.h
     include/amici/solver_idas.h
     include/amici/spline.h
+    include/amici/splinefunctions.h
     include/amici/steadystateproblem.h
     include/amici/sundials_linsol_wrapper.h
     include/amici/sundials_matrix_wrapper.h
