--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -25,13 +25,14 @@ classifiers =
 packages = find_namespace:
 package_dir =
     amici = amici
-python_requires = >=3.8
+python_requires = >=3.9
 install_requires =
     cmake-build-extension==0.5.1
     sympy>=1.9
-    numpy>=1.17.5; python_version=='3.8'
     numpy>=1.19.3; python_version=='3.9'
     numpy>=1.21.4; python_version>='3.10'
+    numpy==1.23.2; python_version=='3.11'
+    numpy; python_version>='3.12'
     python-libsbml
     h5py
     pandas
