--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -31,7 +31,7 @@ install_requires =
     sympy>=1.9
     numpy>=1.19.3; python_version=='3.9'
     numpy>=1.21.4; python_version>='3.10'
-    numpy==1.23.2; python_version=='3.11'
+    numpy>=1.23.2; python_version=='3.11'
     numpy; python_version>='3.12'
     python-libsbml
     h5py
