--- a/.github/workflows/test_doc.yml
+++ b/.github/workflows/test_doc.yml
@@ -56,7 +56,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ 3.8 ]
+        python-version: [ "3.11" ]
 
     steps:
       - name: Set up Python ${{ matrix.python-version }}
