--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -64,6 +64,7 @@ jobs:
     # run gradient checks
     - name: Run Gradient Checks
       run: |
+        pip install git+https://github.com/ICB-DCM/fiddy.git@fixes_ff#egg=fiddy \
         cd tests/benchmark-models && pytest ./test_petab_benchmark.py
 
     # upload results
