--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Install AMICI sdist
       run: |
         AMICI_PARALLEL_COMPILE=2 pip3 install -v --user \
-            $(ls -t python/sdist/dist/amici-*.tar.gz | head -1)[petab,test]
+            $(ls -t python/sdist/dist/amici-*.tar.gz | head -1)[petab,test,vis]
 
     # retrieve test models
     - name: Download and test benchmark collection
