--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -51,6 +51,7 @@ jobs:
         pip3 install build && cd python/sdist && python3 -m build --sdist
     - name: Install AMICI sdist
       run: |
+        pip3 install --user petab[vis] && \
         AMICI_PARALLEL_COMPILE=2 pip3 install -v --user \
             $(ls -t python/sdist/dist/amici-*.tar.gz | head -1)[petab,test,vis]
 
