Fix visualization dependencies

--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -52,7 +52,9 @@ test =
     pytest-rerunfailures
     coverage
     shyaml
-vis = matplotlib
+vis =
+    matplotlib
+    seaborn
 
 [options.package_data]
 amici =
