Fix jax notebook dependency

--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -96,6 +96,11 @@ jobs:
           --cov-append \
           ${AMICI_DIR}/python/tests
 
+    - name: Install notebook dependencies
+      run: |
+        source build/venv/bin/activate \
+        && pip install jax[cpu]
+
     - name: example notebooks
       run: |
         scripts/runNotebook.sh python/examples/example_*/
