--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -1,5 +1,11 @@
 name: C++/Python Tests
-on: [push, merge_group, workflow_dispatch]
+on:
+  push:
+  merge_group:
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -91,10 +97,22 @@ jobs:
         source build/venv/bin/activate \
         && pytest \
           --ignore-glob=*petab* \
+          --ignore-glob=*test_splines.py \
           --cov=amici \
           --cov-report=xml:"${AMICI_DIR}/build/coverage_py.xml" \
           --cov-append \
           ${AMICI_DIR}/python/tests
+
+
+    - name: Python tests splines
+      if: ${{ github.base_ref == 'master' || github.event.merge_group.base_ref == 'master'}}
+      run: |
+        source build/venv/bin/activate \
+        && pytest \
+          --cov=amici \
+          --cov-report=xml:"${AMICI_DIR}/build/coverage_py.xml" \
+          --cov-append \
+          ${AMICI_DIR}/python/tests/test_splines.py
 
     - name: Install notebook dependencies
       run: |
