--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -5,6 +5,7 @@ on:
       - develop
       - master
       - release**
+      - check_grad_sbml_test_suite
   pull_request:
     paths:
       - .github/workflows/test_sbml_semantic_test_suite.yml
