--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -37,7 +37,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-      run: |
+    - run: |
         pip install git+https://github.com/ICB-DCM/fiddy.git
 
     - uses: actions/checkout@v3
