--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -37,17 +37,21 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - run: |
-        pip install git+https://github.com/ICB-DCM/fiddy.git
 
     - uses: actions/checkout@v3
       with:
         fetch-depth: 1
+
     - name: apt
       run: |
         sudo apt-get update \
           && sudo apt-get install -y swig4.0 libatlas-base-dev
+
     - run: AMICI_PARALLEL_COMPILE=2 ./scripts/installAmiciSource.sh
+
+    - run: |
+        source build/venv/bin/activate && pip install git+https://github.com/ICB-DCM/fiddy.git
+
     - run: AMICI_PARALLEL_COMPILE=2 ./scripts/run-SBMLTestsuite.sh ${{ matrix.cases }}
 
     - name: "Upload artifact: SBML semantic test suite results"
