Fix .gitignore amici_models

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ models/model_robertson/build/*
 !models/model_calvetti
 models/model_calvetti/build/*
 
-amici_models/*
+amici_models/
 
 simulate_model_*_hdf.m
 simulate_model_*.m
