PEtab-multilanguage proof of concept for PySB-PEtab (#1800)
* Test new PEtab model abstraction

* Update .github/workflows/test_petab_test_suite.yml

* Run v2.0.0 test suite

* pysb models

* ..

* ..

* ..

* ..

* libpetab-python.git@model_pysb

* generalize fixed parameters

* ..

* ..

* ..

* ..

* cleanup

* cleanup

* add support for species reinitialization in pysb

* fixup preequilibration

* fixup preequilibration pysb

* fixup pysb import

* prevent warnings?

* move resolve mapping to petab lib, adapt to updated api

* fix error message

* fixup condition checks

* suppress model warnings

* fixup export issues

* cleanup

* fixup

* fixup compartment

* simplify

* Fix NameError: name 'sbml_model' is not defined

* ?

* make pattern matching exact so we only assign single species

* Update petab_import_pysb.py

* ..

* Revert ".."

This reverts commit 02a4f2402f0ef2f975a404720b0b0440fb19b085.

* ..

* deps

* ..

* Update test_benchmark_collection_models.yml

* branch

* Fix matplotlib conflict

> The conflict is caused by:
>    The user requested matplotlib==3.5.3
>    petab[vis] 0.2.0 depends on matplotlib>=3.6.0; extra == "vis"

* merge?

* e

* ..

* - libpetab-python.git@model_pysb

* doc,cleanup

* fix model name / dir

* fixup, cleanup

* cleanup; fixup merge

* ..

* pypi

* pysb

* ..

* deps

* pypi-petab

* reqs

---------

Co-authored-by: Fabian Fröhlich <fabian@schaluck.com>

--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -43,8 +43,6 @@ jobs:
             libatlas-base-dev \
             python3-venv
 
-      - run: pip3 install pysb petab
-
       - name: Build BNGL
         run: |
           scripts/buildBNGL.sh
@@ -58,6 +56,11 @@ jobs:
       - name: Install python package
         run: |
           scripts/installAmiciSource.sh
+
+      - name: Install petab
+        run: |
+          source ./build/venv/bin/activate \
+            && pip3 install wheel pytest shyaml pytest-cov pysb
 
       # retrieve test models
       - name: Download and install PEtab test suite
