--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     numpy; python_version>='3.12'
     python-libsbml
     h5py
-    pandas
+    pandas>=2.0.2
     wurlitzer
     toposort
     setuptools>=48
