CI: Fail on warnings
WIP

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@
 addopts = -vv --strict-markers
 
 filterwarnings =
+    error
     # hundreds of SBML <=5.17 warnings
     ignore:.*inspect.getargspec\(\) is deprecated.*:DeprecationWarning
     # pysb warnings
