--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,8 @@ addopts = -vv --strict-markers
 
 filterwarnings =
     error
+    # amici
+    ignore:Conservation laws for non-constant species in models with RateRules are currently not supported and will be turned off.:UserWarning
     # hundreds of SBML <=5.17 warnings
     ignore:.*inspect.getargspec\(\) is deprecated.*:DeprecationWarning
     # pysb warnings
