--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,8 @@ filterwarnings =
     error
     # amici
     ignore:Conservation laws for non-constant species in models with RateRules are currently not supported and will be turned off.:UserWarning
+    ignore:Conservation laws for non-constant species in models with Species-AssignmentRules are currently not supported and will be turned off.:UserWarning
+    ignore:Support for PEtab2.0 is experimental!:UserWarning
     # hundreds of SBML <=5.17 warnings
     ignore:.*inspect.getargspec\(\) is deprecated.*:DeprecationWarning
     # pysb warnings
