Filter pytest-xdist DeprecationWarning

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,5 +14,7 @@ filterwarnings =
     ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning:pysb\.core
     ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working.*:DeprecationWarning:pysb\.core
     ignore:Model.initial_conditions will be removed in a future version. Instead, you can get a list of Initial objects with Model.initials.:DeprecationWarning:pysb\.core
+    # https://github.com/pytest-dev/pytest-xdist/issues/825#issuecomment-1292283870
+    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
 
 norecursedirs = .git amici_models build doc documentation matlab models ThirdParty amici sdist examples
