--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,7 @@ filterwarnings =
     # amici
     ignore:Conservation laws for non-constant species in models with RateRules are currently not supported and will be turned off.:UserWarning
     ignore:Conservation laws for non-constant species in models with Species-AssignmentRules are currently not supported and will be turned off.:UserWarning
+    ignore:Conservation laws for non-constant species in combination with parameterized stoichiometric coefficients are not currently supported and will be turned off.:UserWarning
     ignore:Support for PEtab2.0 is experimental!:UserWarning
     # hundreds of SBML <=5.17 warnings
     ignore:.*inspect.getargspec\(\) is deprecated.*:DeprecationWarning
