Additional test case

--- a/pytest.ini
+++ b/pytest.ini
@@ -17,5 +17,7 @@ filterwarnings =
     ignore:Model.initial_conditions will be removed in a future version. Instead, you can get a list of Initial objects with Model.initials.:DeprecationWarning:pysb\.core
     # https://github.com/pytest-dev/pytest-xdist/issues/825#issuecomment-1292283870
     ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
+    ignore:.*:ImportWarning:tellurium
+    ignore:.*PyDevIPCompleter6.*:DeprecationWarning
 
 norecursedirs = .git amici_models build doc documentation matlab models ThirdParty amici sdist examples
