--- a/.github/workflows/test_python_ver_matrix.yml
+++ b/.github/workflows/test_python_ver_matrix.yml
@@ -49,7 +49,8 @@ jobs:
           swig \
           libatlas-base-dev \
           libhdf5-serial-dev \
-          libboost-math-dev
+          libboost-math-dev \
+          libncurses5
 
     # install AMICI
     - name: Build BNGL
