Simplify / document antimony import
* Wrapper for importing antimony models, this will allow for more concise test cases in the future
* Remove tellurium dependency, use libantimony directly (so we don't need ncurses and other deps)
* Add antimony example

--- a/.github/workflows/test_python_ver_matrix.yml
+++ b/.github/workflows/test_python_ver_matrix.yml
@@ -49,8 +49,7 @@ jobs:
           swig \
           libatlas-base-dev \
           libhdf5-serial-dev \
-          libboost-math-dev \
-          libncurses5
+          libboost-math-dev
 
     # install AMICI
     - name: Build BNGL
